Updated template to soundcrib setup

--- a/app/index.html
+++ b/app/index.html
@@ -19,54 +19,147 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+    <!-- Header -->
+      <header id="header">
+        <a href="#" class="image avatar"><img src="images/logo.png" alt="" /></a>
+        <h1><strong>SoundCrib</strong>, where good music<br />
+        comes together to create experiences<br />
+        crafted by <a href="#">People just like you.</a></h1>
+      </header>
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+    <!-- Main -->
+      <div id="main">
 
-            <a class="navbar-brand" href="#/">soundCrib</a>
-          </div>
+        <!-- One -->
+          <section id="one">
+            <header class="major">
+              <h2>Sound Crib Playlist</h2>
+            </header>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+          <div plangular="http://soundcloud.com/soundcrib/sets/soundcrib" class="mb3 bg-darken-2 rounded">
+            <div class="p2">
+              <div class="flex flex-center">
+                <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
+              </div>
+              <h3 class="h1 caps mt0">{{playlist.title}}</h3>
+              <div class="flex flex-center">
+                <button class="flex-none h3 button button-narrow button-transparent button-grow rounded"
+                  title="Play Previous Track"
+                  ng-click="previous()">
+                  <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+                </button>
+                <button class="flex-none h1 button button-transparent button-grow rounded"
+                  title="Play/Pause"
+                  ng-click="playPause(index)">
+                  <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+                  <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+                </button>
+                <button class="flex-none h3 button mr2 button-narrow button-transparent button-grow rounded"
+                  title="Play Next Track"
+                  ng-click="next()">
+                  <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+                </button>
+                <progress
+                  class="progress"
+                  ng-click="seek($event)"
+                  ng-value="currentTime / duration || 0">
+                  {{ currentTime / duration }}
+                </progress>
+              </div>
+            </div>
+            <ul class="list-reset">
+              <li ng-repeat="track in tracks">
+                <button
+                  class="flex flex-center full-width left-align button button-transparent"
+                  title="Play {{track.title}}"
+                  ng-class="{'is-active': player.playing === track.src }"
+                  ng-click="playPause($index)">
+                  <span class="custom-flex-auto">
+                    {{track.user.username}} - {{track.title}}
+                  </span>
+                  <span class="h6">
+                    {{ track.duration / 1000 | hhmmss }}
+                  </span>
+                </button>
+              </li>
             </ul>
           </div>
+
+          </section>
+
+          <div ng-view=""></div>
+
+    <!-- Footer -->
+      <footer id="footer">
+        <p>Link Here</p>
+      </footer>
+
+      <div ng-init="artists = [
+        {name:'A$AP Rocky', url:'https://soundcloud.com/asap-rocky/sets/liveloveasap'}
+      ]">
+
+      <div ng-repeat="artist in artists" class="fullPagePlayer">
+        <span class="closer"></span>
+        <div plangular="{{artist.url}}" class="artistPlayer mb3 bg-darken-2 rounded">
+          <div class="p2">
+            <div class="flex flex-center">
+              <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
+            </div>
+            <h3 class="h1 caps mt0">{{playlist.title}}</h3>
+            <div class="flex flex-center">
+              <button class="flex-none h3 button button-narrow button-transparent button-grow rounded"
+                title="Play Previous Track"
+                ng-click="previous()">
+                <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+              </button>
+              <button class="flex-none h1 button button-transparent button-grow rounded"
+                title="Play/Pause"
+                ng-click="playPause(index)">
+                <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+                <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+              </button>
+              <button class="flex-none h3 button mr2 button-narrow button-transparent button-grow rounded"
+                title="Play Next Track"
+                ng-click="next()">
+                <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+              </button>
+              <progress
+                class="progress"
+                ng-click="seek($event)"
+                ng-value="currentTime / duration || 0">
+                {{ currentTime / duration }}
+              </progress>
+            </div>
+          </div>
+          <ul class="list-reset">
+            <li ng-repeat="track in tracks">
+              <button
+                class="flex flex-center full-width left-align button button-transparent"
+                title="Play {{track.title}}"
+                ng-class="{'is-active': player.playing === track.src }"
+                ng-click="playPause($index)">
+                <span class="custom-flex-auto">
+                  {{track.user.username}} - {{track.title}}
+                </span>
+                <span class="h6">
+                  {{ track.duration / 1000 | hhmmss }}
+                </span>
+              </button>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
+      ga('create', 'UA-61937734-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
 
     <!-- build:js(.) scripts/vendor.js -->
