Updated template to soundcrib setup

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
               <h2>Sound Crib Playlist</h2>
             </header>
 
-          <div plangular="http://soundcloud.com/soundcrib/sets/soundcrib" class="mb3 bg-darken-2 rounded">
+<!--           <div plangular="http://soundcloud.com/soundcrib/sets/soundcrib" class="mb3 bg-darken-2 rounded">
             <div class="p2">
               <div class="flex flex-center">
                 <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
@@ -83,7 +83,7 @@
                 </button>
               </li>
             </ul>
-          </div>
+          </div> -->
 
           </section>
 
@@ -94,7 +94,7 @@
         <p>Link Here</p>
       </footer>
 
-      <div ng-init="artists = [
+      <!-- <div ng-init="artists = [
         {name:'A$AP Rocky', url:'https://soundcloud.com/asap-rocky/sets/liveloveasap'}
       ]">
 
@@ -148,7 +148,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
