--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,6 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>
     <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/init.js"></script>
     <noscript>
       <link rel="stylesheet" href="assets/css/skel.css" />
       <link rel="stylesheet" href="assets/css/style.css" />
@@ -44,31 +43,46 @@
         <!-- One -->
           <section id="one">
             <header class="major">
-              <h2>Sound Crib Playlist</h2>
+
             </header>
 
           <div plangular="http://soundcloud.com/soundcrib/sets/soundcrib" class="mb3 bg-darken-2 rounded soundCribPlayer">
-            <div class="p2">
-              <div class="flex flex-center">
-                <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
-              </div>
+            <div class="playerHead">
               <h3 class="h1 caps mt0">{{playlist.title}}</h3>
-              <div class="flex flex-center">
+            </div>
+            <ul class="list-reset trackList">
+              <li class="trackItem" ng-repeat="track in tracks">
+                <button
+                  class="flex flex-center full-width left-align track-button button-transparent"
+                  title="Play {{track.title}}"
+                  ng-class="{'is-active': player.playing === track.src }"
+                  ng-click="playPause($index)">
+                  <span class="custom-flex-auto trackTitle">
+                    {{track.user.username}} - {{track.title}}
+                  </span>
+                  <span class="h6 trackDuration">
+                    {{ track.duration / 1000 | hhmmss }}
+                  </span>
+                </button>
+              </li>
+            </ul>
+            <div class="stickyControls">
+              <div class="playButtonContainer">
                 <button class="flex-none h3 action-button button-narrow button-transparent button-grow rounded"
                   title="Play Previous Track"
                   ng-click="previous()">
-                  <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
+                  <svg class="icon geomicon secondaryIcons" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
                 </button>
                 <button class="flex-none h1 action-button button-transparent button-grow rounded"
                   title="Play/Pause"
                   ng-click="playPause(index)">
-                  <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
-                  <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
+                  <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
+                  <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
                 </button>
                 <button class="flex-none h3 action-button mr2 button-narrow button-transparent button-grow rounded"
                   title="Play Next Track"
                   ng-click="next()">
-                  <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
+                  <svg class="icon geomicon secondaryIcons" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
                 </button>
               </div>
               <div class="progressContainer">
@@ -79,23 +93,10 @@
                   {{ currentTime / duration }}
                 </progress>
               </div>
+              <div class="durationContainer">
+                <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
+              </div>
             </div>
-            <ul class="list-reset">
-              <li ng-repeat="track in tracks">
-                <button
-                  class="flex flex-center full-width left-align track-button button-transparent"
-                  title="Play {{track.title}}"
-                  ng-class="{'is-active': player.playing === track.src }"
-                  ng-click="playPause($index)">
-                  <span class="custom-flex-auto">
-                    {{track.user.username}} - {{track.title}}
-                  </span>
-                  <span class="h6">
-                    {{ track.duration / 1000 | hhmmss }}
-                  </span>
-                </button>
-              </li>
-            </ul>
           </div>
 
           </section>
@@ -107,6 +108,7 @@
         <p>Link Here</p>
       </footer>
 
+    <script src="assets/js/init.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
