Added clean up styles and artist photos

--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
 
     <!-- Footer -->
       <footer id="footer">
-        <p>Link Here</p>
+        <a href="mailto:soundcribmusic@gmail.com">Requests</a>
       </footer>
 
     <script src="assets/js/init.js"></script>
