Added new favicon and apple-touch-icon

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <!-- Header -->
       <header id="header">
         <a href="#" class="image avatar"><img src="assets/images/logo.png" alt="" /></a>
-        <h1><strong>SoundCrib</strong></h1>
+        <h1><strong>SoundCrib </strong></h1>
       </header>
 
     <!-- Main -->
@@ -110,7 +110,7 @@
 
     <!-- Footer -->
       <footer id="footer">
-        <a href="mailto:soundcribmusic@gmail.com">Requests</a>
+        <a href="https://soundcloud.com/soundcrib" target="_blank">SoundCloud</a>
       </footer>
 
     <script src="assets/js/init.js"></script>
