--- a/app/index.html
+++ b/app/index.html
@@ -31,82 +31,14 @@
 
     <!-- Header -->
       <header id="header">
-        <a href="#" class="image avatar"><img src="assets/images/logo.png" alt="" /></a>
+        <a href="/#/" class="image avatar"><img src="assets/images/logo.png" alt="" /></a>
         <h1><strong>SoundCrib </strong></h1>
       </header>
 
     <!-- Main -->
-      <div id="main">
-
-        <!-- One -->
-          <section id="one">
-            <header class="major">
-
-            </header>
-
-          <div plangular="http://soundcloud.com/soundcrib/sets/soundcrib" class="mb3 bg-darken-2 rounded soundCribPlayer">
-            <div class="playerHead">
-              <h3 class="h1 caps mt0">{{playlist.title}}</h3>
-            </div>
-            <ul class="list-reset trackList">
-              <li class="trackItem" ng-repeat="track in tracks">
-                <div class="track-progress-bar">
-                  <div
-                  ng-class="{'show-progress': player.playing === track.src }"
-                  style="width:{{currentTime / duration * 100 || 0}}%"
-                  class="play-bg">
-                  </div>
-                </div>
-                <button
-                  class="flex flex-center full-width left-align track-button button-transparent"
-                  title="Play {{track.title}}"
-                  ng-class="{'is-active': player.playing === track.src }"
-                  ng-click="playPause($index)">
-                  <span class="trackDuration">
-                    {{ track.duration / 1000 | hhmmss }}
-                  </span>
-                  <span class="trackTitle">
-                    {{track.title}}
-                  </span>
-                  <span class="trackArtist">
-                    {{track.user.username}}
-                  </span>
-                </button>
-              </li>
-            </ul>
-            <div class="stickyControls">
-              <div class="playButtonContainer">
-                <button class="flex-none h3 action-button button-narrow button-transparent button-grow rounded"
-                  title="Play Previous Track"
-                  ng-click="previous()">
-                  <svg class="icon geomicon secondaryIcons" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
-                </button>
-                <button class="flex-none h1 action-button button-transparent button-grow rounded"
-                  title="Play/Pause"
-                  ng-click="playPause(index)">
-                  <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
-                  <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
-                </button>
-                <button class="flex-none h3 action-button mr2 button-narrow button-transparent button-grow rounded"
-                  title="Play Next Track"
-                  ng-click="next()">
-                  <svg class="icon geomicon secondaryIcons" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
-                </button>
-              </div>
-              <div class="progressContainer">
-                <progress
-                  class="progress"
-                  ng-click="seek($event)"
-                  ng-value="currentTime / duration || 0">
-                  {{ currentTime / duration }}
-                </progress>
-              </div>
-            </div>
-          </div>
-
-          </section>
-
-          <div ng-view=""></div>
+      <div id="main" style="display:none;">
+        <div ng-view=""></div>
+      </div>
 
     <!-- Footer -->
       <footer id="footer">
@@ -114,7 +46,6 @@
       </footer>
 
     <script src="assets/js/init.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -143,6 +74,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/artists.js"></script>
         <!-- endbuild -->
 </body>
 </html>
